# 3DGaussianRenderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  design.md
app/: camera_controller.cpp  camera_controller.h  glfw_window.cpp  glfw_window.h  main.cpp  opengl_display.cpp  opengl_display.h  perf_overlay.cpp  perf_overlay.h
core/: camera.cpp  camera.h  camera_controls.cpp  cuda_error_check.cpp  cuda_renderer.cu  cuda_renderer.cuh  cuda_utils.h  device_buffer.cu  device_buffer.h  gaussian_model.cpp  gaussian_model.h  gaussian_render.cu  gaussian_render.cuh  ply_loader.cpp  ply_loader.h  ply_parser.cpp  ply_parser.h  renderer.cpp  renderer.h  types.h  utilities.h
data/: random_cube.ply
